# python-django-example-app-in-devcontainer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
django_example_app/hello_world/: settings.py
