[tool.poetry]
name = "python-django-example-app-in-devcontainer"
version = "0.1.0"
description = "A Python Django Example App in Dev Container"
authors = ["Christian Hueser <55481699+christianhueserhzdr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_example_app"}]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3" 
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
